<resources>
    <string name="app_name">Boman</string>
    <string name="slogan">伴你静享健康生活</string>

    <!-- All Toolbars here -->
    <string name="toolbar_location_check">请打开定位</string>
    <string name="toolbar_bluetooth_check">请打开蓝牙</string>
    <string name="toolbar_radar">尝试连接中</string>

    <!--  All Connection Status  -->
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="status_connected">已连接</string>
    <string name="status_disconnected">未连接</string>
    <string name="active_disconnected">主动断开成功</string>
    <string name="inactive_disconnected">连接消失了。。。</string>


    <!--  Activities  -->
    <!--  LocationCheckActivity  -->
    <string name="button_allow">好的</string>
    <string name="button_deny">拒绝</string>
    <string name="permission_rationale">我们需要蓝牙和位置服务的权限，使用位置服务是为了让蓝牙更好的进行连接。</string>
    <string name="permission_denied">我们需要蓝牙和位置服务的权限，使用位置服务是为了让蓝牙更好的进行连接。</string>
    <string name="open_setting">去设置</string>
    <string name="open_setting_permission">请去"设置"手动授予我们位置权限。</string>
    <string name="notifyTitle">系统位置服务已关闭</string>
    <string name="gpsNotifyMsg">请打开位置服务，以便使用蓝牙更好的查找您的产品。</string>
    <string name="please_open_gps">请开启位置服务</string>
    <string name="go_gps_setting">去设置</string>
    <string name="cancel">取消</string>

    <!--  Activity Layout XMLs  -->
    <!--  activity_login_portal.xml  -->
    <string name="login_wechat_login">微信登录</string>
    <string name="login_phone_login">手机号登录</string>
    <!--  activity_main.xml  -->
    <string name="main_welcome_title">欢迎</string>
    <string name="main_welcome_info">该应用能让您设置、控制、畅享您的铂曼智慧医疗设备</string>
    <string name="main_add_device">添加产品</string>
    <!--  activity_bluetooth_check.xml  -->
    <string name="location_check_please_permit_location_title">请您允许使用定位</string>
    <string name="location_check_please_permit_location_explanation">使用蓝牙时，需要您打开位置服务并向Boman授权使用位置权限。（使用位置服务是为了让蓝牙更好的进行连接。）</string>
    <string name="location_check_ok">好的</string>
    <!--  activity_location_check.xml  -->
    <string name="bluetooth_check_please_permit_bluetooth_title">请您确保蓝牙的打开</string>
    <string name="bluetooth_check_please_permit_bluetooth_explanation">我们的应用必须打开蓝牙才能连接铂曼设备；</string>
    <string name="bluetooth_check_ok">好的</string>
    <!--  adapter_rv_bound_device_item.xml  -->
    <string name="rv_bound_device_name_title">产品</string>
    <string name="rv_bound_device_name">铂曼额温枪一代</string>
    <string name="rv_bound_device_status_title">蓝牙状态</string>
    <string name="rv_bound_device_status">已连接</string>
    <string name="rv_bound_device_soc_title">剩余电量</string>
    <string name="rv_bound_device_soc">- - %</string>
    <!--  adapter_rv_list_device_item.xml  -->
    <string name="rv_list_device_name">铂曼额温枪 #12222</string>
    <!--  fragment_connect_failure.xml  -->
    <string name="connect_failure_ok">好的</string>
    <!--  fragment_connect_loading.xml  -->
    <!--  fragment_device_list.xml  -->

    <!--  Not organized.  -->
    <string name="enter">进入操作</string>
    <string name="thermometer_icon">thermometer icon</string>
    <string name="rssi_icon">rssi icon</string>


    <string name="please_open_blue">请先打开蓝牙</string>


    <string name="connected">已连接</string>
    <string name="connect_fail">连接失败</string>
    <string name="ok">好的</string>
    <string name="device_bindable">可绑定</string>
</resources>
