<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/safe_distance_20dp"
    android:paddingEnd="@dimen/safe_distance_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <View
        android:id="@+id/v_blank_top"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_device_img"
        android:layout_width="wrap_content"
        android:layout_height="264dp"
        android:src="@drawable/product_thermometer"
        app:layout_constraintTop_toBottomOf="@id/v_blank_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/v_blank_middle"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        app:layout_constraintTop_toBottomOf="@id/iv_device_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_device_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_middle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/rv_bound_device_name_title"
        android:textColor="@color/colorTextLightGray"
        android:textSize="@dimen/text_size_16sp"/>

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_middle"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rv_bound_device_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_16sp"/>

    <View
        android:id="@+id/v_blank_interval0"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tv_device_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_device_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_interval0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/rv_bound_device_status_title"
        android:textColor="@color/colorTextLightGray"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/tv_device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_interval0"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rv_bound_device_status"
        android:textColor="@color/colorMainTheme"
        android:textSize="@dimen/text_size_16sp" />

    <View
        android:id="@+id/v_blank_interval1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tv_device_status_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_device_soc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_interval1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/rv_bound_device_soc_title"
        android:textColor="@color/colorTextLightGray"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/tv_device_soc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_blank_interval1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rv_bound_device_soc"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_16sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
