<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".activity.MainActivity">

    <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/safe_distance_20dp"
        android:layout_marginTop="@dimen/safe_distance_20dp"
        android:src="@mipmap/logo"
        app:shape_mode="circle"
        app:stroke_color="@color/colorAccent"
        app:stroke_width="0dp" />

    <FrameLayout
        android:id="@+id/fl_new_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_mask"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/safe_distance_20dp"
            android:paddingEnd="@dimen/safe_distance_20dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tv_welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_welcome_title"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_welcome_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="31dp"
                android:text="@string/main_welcome_info"
                android:textSize="16sp"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_add_device"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="44dp"
                android:text="@string/main_add_device"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_transparent"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_bound_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GoToLogin" />
            <Button
                android:id="@+id/disconnect_ble_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="解除绑定设备" />
        </LinearLayout>

    </FrameLayout>



</androidx.appcompat.widget.LinearLayoutCompat>